Generated text should make more sense  #35